# memogarden-api

./: .env.example  .gitignore  README.md  gunicorn.conf.py  pyproject.toml  run_tests.sh
.github/workflows/: deploy.yml  test.yml
api/: config.py  events.py  main.py  semantic.py  validation.py
api/handlers/: __init__.py  artifact.py  conversation.py  core.py  decorators.py  soil.py
api/middleware/: api.py  api_keys.py  decorators.py  service.py  token.py  ui.py
api/schemas/: __init__.py  semantic.py
api/v1/: __init__.py
api/v1/core/: recurrences.py  transactions.py
tests/: README.md  TEST_DECISIONS.md  __init__.py  conftest.py  test_audit_facts.py  test_auth.py  test_context.py  test_conversation_fold_api.py  test_health_status.py  test_path_resolution.py  test_recurrences.py  test_relations_bundle.py  test_search.py  test_semantic_api.py  test_sse.py  test_track.py  test_transactions.py  test_user_relations.py
